Security changes and new API endpoints.
Following changes has been made.
- Refactored security keys to be one for each main endpoint path.
  -  This is a major change, be sure to check you config and adjust.
  - Affects only DELETE endpoints. no changes in GET and POST API calls has been made.
- Corrected minor spelling errors here and there.
- New endpoints:
  - /v1/common/deleteImages
  - /v1/containers/deleteContainer
  - /v1/containers/deleteVolume
  - /v1/networks/deleteNetwork
  - /v1/pods/deletePod
