# src/main.rs
@@ -107,26 +107,31 @@ async fn http_server() -> std::io::Result<()> {
                     .route("/v1/common/getStats", web::get().guard(guard::Get()).to(handlers::get_common_stats))
                     .route("/v1/common/getVersion", web::get().guard(guard::Get()).to(handlers::get_common_version))
                     .route("/v1/common/getInfo", web::get().guard(guard::Get()).to(handlers::get_common_info))
-                    .route("/v1/common/getImageListShort", web::get().guard(guard::Get()).to(handlers::get_short_image_list))
-                    .route("/v1/common/getImageListDetailed", web::get().guard(guard::Get()).to(handlers::get_detailed_image_list))
+                    .route("/v1/common/getImageListShort", web::get().guard(guard::Get()).to(handlers::get_common_short_image_list))
+                    .route("/v1/common/getImageListDetailed", web::get().guard(guard::Get()).to(handlers::get_common_detailed_image_list))
                     .route("/v1/common/postEnvFileCreate", web::post().guard(guard::Post()).to(handlers::post_common_envfile))
                     .route("/v1/common/postSecretCreate", web::post().guard(guard::Post()).to(handlers::post_common_secret))
-                    .route("/v1/common/deleteEnvFile", web::delete().guard(guard::Delete()).to(handlers::del_common_envfile))
-                    .route("/v1/common/deleteSecFile", web::delete().guard(guard::Delete()).to(handlers::del_common_secfile))
+                    .route("/v1/common/deleteEnvFile", web::delete().guard(guard::Delete()).to(handlers::delete_common_envfile))
+                    .route("/v1/common/deleteSecFile", web::delete().guard(guard::Delete()).to(handlers::delete_common_secfile))
+                    .route("/v1/common/deleteImages", web::delete().guard(guard::Delete()).to(handlers::delete_common_images))
                     // Containers API
                     .route("/v1/containers/getStatus", web::get().guard(guard::Get()).to(handlers::get_containers_status))
                     .route("/v1/containers/getStatus/{id}", web::get().guard(guard::Get()).to(handlers::get_containers_status_query))
                     .route("/v1/containers/postContainerCreate", web::post().guard(guard::Post()).to(handlers::post_containers_create))
                     .route("/v1/containers/postSetState", web::post().guard(guard::Post()).to(handlers::post_containers_setstate))
+                    .route("/v1/containers/deleteContainer", web::delete().guard(guard::Delete()).to(handlers::delete_containers_data))
+                    .route("/v1/containers/deleteVolume", web::delete().guard(guard::Delete()).to(handlers::delete_containers_volume_data))
                     // Pods API
                     .route("/v1/pods/getStatus", web::get().guard(guard::Get()).to(handlers::get_pods_status))
                     .route("/v1/pods/getStatus/{id}", web::get().guard(guard::Get()).to(handlers::get_pods_status_query))
                     .route("/v1/pods/postPodCreate", web::post().guard(guard::Post()).to(handlers::post_pods_create))
                     .route("/v1/pods/postSetState", web::post().guard(guard::Post()).to(handlers::post_pods_setstate))
+                    .route("/v1/pods/deletePod", web::delete().guard(guard::Delete()).to(handlers::delete_pods_data))
                     // Networks API
                     .route("/v1/networks/getInfo", web::get().guard(guard::Get()).to(handlers::get_networks_info))
                     .route("/v1/networks/getInfo/{id}", web::get().guard(guard::Get()).to(handlers::get_networks_info_single))
                     .route("/v1/networks/postNetworkCreate", web::post().guard(guard::Post()).to(handlers::post_networks_create))
+                    .route("/v1/networks/deleteNetwork", web::delete().guard(guard::Delete()).to(handlers::delete_networks_data))
             )
         })
         .bind(config::SERVER_ADDRESS.get().unwrap())?
@@ -175,26 +180,31 @@ async fn https_server() -> std::io::Result<()> {
                     .route("/v1/common/getStats", web::get().guard(guard::Get()).to(handlers::get_common_stats))
                     .route("/v1/common/getVersion", web::get().guard(guard::Get()).to(handlers::get_common_version))
                     .route("/v1/common/getInfo", web::get().guard(guard::Get()).to(handlers::get_common_info))
-                    .route("/v1/common/getImageListShort", web::get().guard(guard::Get()).to(handlers::get_short_image_list))
-                    .route("/v1/common/getImageListDetailed", web::get().guard(guard::Get()).to(handlers::get_detailed_image_list))
+                    .route("/v1/common/getImageListShort", web::get().guard(guard::Get()).to(handlers::get_common_short_image_list))
+                    .route("/v1/common/getImageListDetailed", web::get().guard(guard::Get()).to(handlers::get_common_detailed_image_list))
                     .route("/v1/common/postEnvFileCreate", web::post().guard(guard::Post()).to(handlers::post_common_envfile))
                     .route("/v1/common/postSecretCreate", web::post().guard(guard::Post()).to(handlers::post_common_secret))
-                    .route("/v1/common/deleteEnvFile", web::delete().guard(guard::Delete()).to(handlers::del_common_envfile))
-                    .route("/v1/common/deleteSecFile", web::delete().guard(guard::Delete()).to(handlers::del_common_secfile))
+                    .route("/v1/common/deleteEnvFile", web::delete().guard(guard::Delete()).to(handlers::delete_common_envfile))
+                    .route("/v1/common/deleteSecFile", web::delete().guard(guard::Delete()).to(handlers::delete_common_secfile))
+                    .route("/v1/common/deleteImages", web::delete().guard(guard::Delete()).to(handlers::delete_common_images))
                     // Containers API
                     .route("/v1/containers/getStatus", web::get().guard(guard::Get()).to(handlers::get_containers_status))
                     .route("/v1/containers/getStatus/{id}", web::get().guard(guard::Get()).to(handlers::get_containers_status_query))
                     .route("/v1/containers/postContainerCreate", web::post().guard(guard::Post()).to(handlers::post_containers_create))
                     .route("/v1/containers/postSetState", web::post().guard(guard::Post()).to(handlers::post_containers_setstate))
+                    .route("/v1/containers/deleteContainer", web::delete().guard(guard::Delete()).to(handlers::delete_containers_data))
+                    .route("/v1/containers/deleteVolume", web::delete().guard(guard::Delete()).to(handlers::delete_containers_volume_data))
                     // Pods API
                     .route("/v1/pods/getStatus", web::get().guard(guard::Get()).to(handlers::get_pods_status))
                     .route("/v1/pods/getStatus/{id}", web::get().guard(guard::Get()).to(handlers::get_pods_status_query))
                     .route("/v1/pods/postPodCreate", web::post().guard(guard::Post()).to(handlers::post_pods_create))
                     .route("/v1/pods/postSetState", web::post().guard(guard::Post()).to(handlers::post_pods_setstate))
+                    .route("/v1/pods/deletePod", web::delete().guard(guard::Delete()).to(handlers::delete_pods_data))
                     // Networks API
                     .route("/v1/networks/getInfo", web::get().guard(guard::Get()).to(handlers::get_networks_info))
                     .route("/v1/networks/getInfo/{id}", web::get().guard(guard::Get()).to(handlers::get_networks_info_single))
                     .route("/v1/networks/postNetworkCreate", web::post().guard(guard::Post()).to(handlers::post_networks_create))
+                    .route("/v1/networks/deleteNetwork", web::delete().guard(guard::Delete()).to(handlers::delete_networks_data))
             )
         })
         .bind_rustls_0_23(config::SERVER_ADDRESS.get().unwrap(), tls_config)?
